--- a/magiccompt.html
+++ b/magiccompt.html
@@ -9,18 +9,16 @@
 		</head>
 
 	<body>
-		<div class="header">
-			<div class="container">
-				<div class="nav">
-					<ul>
-					<li><a href="#">News</a></li>
-					<li><a href="#">Team</a></li>
-					<li><a href="#">Achievements</a></li>
-					<li><a href="#">Contacts</a></li>
-				</ul>
-				</div>
-			</div>
-		</div>
+		<header >			
+				<nav class="container">
+					
+						<a href="#">News</a>
+						<a href="#">Team</a>
+						<a href="#">Achievements</a>
+						<a href="#">Contacts</a>
+					
+				</nav>
+		</header>
 
 		<div class="jumbotron">
 			<div class="container">
