--- a/magiccompt.html
+++ b/magiccompt.html
@@ -32,24 +32,24 @@
 		<div class="supporting">
 			<div class="container">
 				<div class="col">
-					<img src="whitemanasymbol.gif" width="150" height="150">
-					<p style="color: rgb(168,135,91)">WHITE</p>
+					<img src="White.png" width="150" height="150">
+				<!--	<p style="color: rgb(168,135,91)">WHITE</p> -->
 				</div>
 				<div class="col">
-					<img src="bluemanasymbol.gif" width="150" height="150">
-					<p style="color: rgb(168,135,91)">BLUE</p>
+					<img src="Blue.png" width="150" height="150">
+				<!--	<p style="color: rgb(168,135,91)">BLUE</p> -->
 				</div>
 				<div class="col">
-					<img src="blackmanasymbol.gif" width="150" height="150">
-					<p style="color: rgb(168,135,91)">BLACK</p>
+					<img src="Black.png" width="150" height="150">
+				<!--	<p style="color: rgb(168,135,91)">BLACK</p> -->
 				</div>
 				<div class="col">
-					<img src="redmanasymbol.gif" width="150" height="150">
-					<p style="color: rgb(168,135,91)">RED</p>
+					<img src="Red.png" width="150" height="150">
+				<!--	<p style="color: rgb(168,135,91)">RED</p> -->
 				</div>
 				<div class="col">
-					<img src="greenmanasymbol.gif" width="150" height="150">
-					<p style="color: rgb(168,135,91)">GREEN</p>
+					<img src="Green.png" width="150" height="150">
+				<!--	<p style="color: rgb(168,135,91)">GREEN</p> -->
 				</div>
 			</div>
 		</div>
